--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="main">#FF24222C</color>
-    <color name="orange">#FF6F14</color>
+    <color name="orange">#FFFF6F14</color>
 </resources>
