ISSUE-2: DrawerComponent dynamic state added.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="main">#FF24222C</color>
     <color name="orange">#FFFF6F14</color>
+    <color name="light_grey">#A6A6B2</color>
 </resources>
